--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.0",
     "@hookform/resolvers": "^2.8.2",
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/jest": "^27.0.2",
     "axios": "^0.24.0",
     "faker": "^5.5.3",
+    "jest": "^27.3.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.18.0",
